syntax="proto3";

package main;

option go_package = "./grpc_fundamental";

import "google/protobuf/timestamp.proto";

message Cpu {
  string brand = 1;
  string name = 2;
  uint32  num_cores = 3;
  uint32  num_threads = 4;
  uint32  max_freq = 5;
  uint32  min_freq = 6;
}

message Gpu {
  string brand = 1;
  string name = 2;
  uint32  max_freq = 5;
  uint32  min_freq = 6;
  Memory memory = 7;
}

message Memory{
  enum Unit{
    UNKNOWN = 0;
    BIT = 1;
    BYTE = 2;
    KILOBYTE = 3;
    MEGABYTE = 4;
    GIGABYTE = 5;
  }

  uint64 value = 1;
  Unit unit = 2;
}

message Storage {
  enum Driver{
    UNKNOWN = 0;
    HDD = 1;
    SSD = 2;
  }

  Driver driver = 1;
  Memory memory = 2;
}

message Screen {
  message Resolution {
    uint32 width = 1;
    uint32 height = 2;
  }

  enum Panel {
    UNKNOWN = 0;
    TN = 1;
    IPS = 2;
    VA = 3;
  }

  float size_inch = 1;
  Resolution resolution = 2;
  Panel panel = 3;
  bool touch = 4;
}

message Laptop {
  string brand = 1;
  string name = 2;
  Cpu cpu = 3;
  Gpu gpu = 4;
  repeated Storage storage = 5;
  Screen screen = 6;
  uint32 ram = 7;
  oneof weight {
    float weight_kg = 8;
    float weight_lbs = 9;
  }
  oneof price {
    uint32  price_usd = 10;
    uint32  price_eur = 11;
  }
  google.protobuf.Timestamp relase_date = 12;
  bool has_camera = 13;
  bool has_microphone = 14;
}
